--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,12 +1,41 @@
 doctype html
-html
+html lang="en-us"
   head
-    title CourseCart
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-    = csrf_meta_tags
+    title Course Cart
+    / frontend_toolkit/head includes default html head tags and csrf_meta_tags
+    = render 'frontend_toolkit/head', title: 'Course Cart'
+    = stylesheet_link_tag 'application', 'default_layout', media: 'all'
 
-  body
-    = yield
+  body class="#{controller_name} #{action_name}"
+    - if current_user.present?
+      - content_for :account_list do
+        li
+          a
+            i.fa.fa-user>
+            = current_user.name
+          li = link_to logout_path do
+            i.fa.fa-power-off>
+            | Logout
+    = render 'frontend_toolkit/biola_header', enable_auth: true
 
-    footer
-      = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    #site_header
+      .page-segment.segment-bold style="padding: 10px 0"
+        .container
+          .row
+            .col-sm-6
+              h1.site-title
+                = link_to 'Course Cart', root_path
+                p.lead Register for Biola courses online
+
+      .wrapper-site
+        - all_messages.each do |message|
+          .alert class="alert-#{message.type}"
+            button.close type="button" data-dismiss="alert"
+              span &times;
+            = fa_icon message.icon, text: message.text
+
+        = yield
+
+      = render 'frontend_toolkit/global_marketing_footer'
+
+      = javascript_include_tag 'application'
