--- a/app/views/answers/_select.html.slim
+++ b/app/views/answers/_select.html.slim
@@ -1,4 +1,4 @@
-.field-group
-  .hidden = f.hidden_field :question_id
-  .label = f.label :value, f.object.name
-  .field = f.select :value, f.object.options
+.form-group class=('required' if f.object.required?)
+  = f.hidden_field :question_id
+  = f.label :value, f.object.name
+  = f.select :value, f.object.options, {}, class: 'form-control'
