--- a/app/views/orders/edit.html.slim
+++ b/app/views/orders/edit.html.slim
@@ -1,23 +1,28 @@
-h2 Registration Questions
+.page-segment
+  .container
+    .row
+      .col-sm-12
+        h2 Registration Questions
 
-- if current_user.nil?
-  .alert.alert-info
-    => link_to 'Login', login_url
-    ' or
-    => link_to 'create an account', create_account_url
-    | to auto-fill the fields below
+        - if current_user.nil?
+          .alert.alert-info
+            => fa_icon 'info-circle'
+            => link_to 'Login', login_url
+            ' or
+            => link_to 'create an account', create_account_url
+            | to auto-fill the fields below
 
-p Please complete the following questions to continue your registration.
+        p Please complete the following questions to continue your registration.
 
-= form_for @order do |f|
-  = f.fields_for :answers, @order.answers do |answer|
-    = render "answers/#{answer.object.type}", f: answer
+        = form_for @order do |f|
+          = f.fields_for :answers, @order.answers do |answer|
+            = render "answers/#{answer.object.type}", f: answer
 
-  = f.submit 'Continue', class: 'btn btn-purple', style: 'float: right'
+          = f.submit 'Continue', class: 'btn btn-primary', style: 'float: right'
 
-- if @order.open? && !params[:cancelled]
-  = form_for @order, method: :delete, html: {style: 'float: right'}
-    button type="submit" class="btn btn-default" style="margin-right: 10px;" Back
+        - if @order.open? && !params[:cancelled]
+          = form_for @order, method: :delete, html: {style: 'float: right'}
+            button type="submit" class="btn btn-default" style="margin-right: 10px;" Back
 
-- elsif @order.cancelled? || params[:cancelled]
-  = link_to 'Back', @order.offering, class: 'btn btn-default'
+        - elsif @order.cancelled? || params[:cancelled]
+          = link_to 'Back', @order.offering, class: 'btn btn-default'
