--- a/app/views/orders/show.html.slim
+++ b/app/views/orders/show.html.slim
@@ -58,7 +58,7 @@
                 = form_for @order, method: :delete
                   button type="submit" class="btn btn-default" style="margin-right: 10px;" Back
 
-            form action=@upay.url method="post" style="display: inline;"
+            form#upay_form action=@upay.url method="post" style="display: inline;"
               - @upay_parameters.each do |name, value|
                 input type="hidden" name=name value=value
               button type="submit" class="btn btn-primary" Finalize Registration
